adding intial test structure for api
